[gd_scene load_steps=2 format=3 uid="uid://bi0h5djpo6bvr"]

[ext_resource type="Script" path="res://FormationEditor/Formation/formation_selection_ui.gd" id="1_vg0oy"]

[node name="FormationSelection" type="MarginContainer"]
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_vg0oy")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.197937, 0.197937, 0.197937, 1)

[node name="M" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="V" type="VBoxContainer" parent="M"]
layout_mode = 2

[node name="Title" type="Label" parent="M/V"]
layout_mode = 2
text = "Formations"

[node name="M" type="MarginContainer" parent="M/V"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Background" type="ColorRect" parent="M/V/M"]
layout_mode = 2
color = Color(0.26779, 0.26779, 0.26779, 1)

[node name="FormationList" type="ItemList" parent="M/V/M"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
item_count = 3
item_0/text = "Rectangle"
item_1/text = "Defensive"
item_2/text = "Spearhead"

[node name="Tools" type="HBoxContainer" parent="M/V"]
layout_mode = 2
alignment = 2

[node name="Select" type="Button" parent="M/V/Tools"]
layout_mode = 2
text = "‚ñ∂Ô∏è"

[node name="Delete" type="Button" parent="M/V/Tools"]
layout_mode = 2
text = "üóëÔ∏è"

[node name="Add" type="Button" parent="M/V/Tools"]
layout_mode = 2
text = "‚ûï"

[connection signal="pressed" from="M/V/Tools/Select" to="." method="_on_select_pressed"]
[connection signal="pressed" from="M/V/Tools/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="M/V/Tools/Add" to="." method="_on_add_pressed"]
